refactor: Replace collect(Collectors.toList()) with toList() for brevity in getDeveloperUsers method